Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
5.3.1
-
Linux + openssl without EC support
-
If5816d473bd1d64b1d4977860db662704a83310f
Description
Some distributions disable EC by default in openssl and compiling Qt on them causes these errors:
ssl/qsslsocket_openssl_symbols_p.h:438:1: error: ‘EC_KEY’ does not name a type ssl/qsslsocket_openssl_symbols_p.h:439:20: error: variable or field ‘q_EC_KEY_free’ declared void ssl/qsslsocket_openssl_symbols_p.h:439:20: error: ‘EC_KEY’ was not declared in this scope ssl/qsslsocket_openssl_symbols_p.h:439:28: error: ‘ecdh’ was not declared in this scope