Fix compilation if EC is disabled in OpenSSL

Some Linux distributions disable EC by default which causes compile
errors on those platforms.

Task-number: QTBUG-40394
Change-Id: If5816d473bd1d64b1d4977860db662704a83310f
Reviewed-by: Richard J. Moore <rich@kde.org>

cregit: 7e74f8f398deb8ed84f6c4613de6dab2066dc9de https://github.com/qt/qtbase/commit/7e74f8f398deb8ed84f6c4613de6dab2066dc9de