src/network/ssl/qsslsocket_openssl_symbols.cpp
@@ -3922,6 +3922,11 @@ argument_list|,
 argument|return
 argument_list|)
 end_macro
+begin_ifndef
+ifndef|#
+directive|ifndef
+name|OPENSSL_NO_EC
+end_ifndef
 begin_macro
 name|DEFINEFUNC
 argument_list|(
@@ -3955,6 +3960,13 @@ argument_list|,
 argument|DUMMYARG
 argument_list|)
 end_macro
+begin_endif
+endif|#
+directive|endif
+end_endif
+begin_comment
+comment|// OPENSSL_NO_EC
+end_comment
 begin_define
 DECL|macro|RESOLVEFUNC
 define|#
@@ -6117,6 +6129,9 @@ name|RESOLVEFUNC
 argument_list|(
 argument|BN_bin2bn
 argument_list|)
+ifndef|#
+directive|ifndef
+name|OPENSSL_NO_EC
 name|RESOLVEFUNC
 argument_list|(
 argument|EC_KEY_new_by_curve_name
@@ -6125,6 +6140,9 @@ name|RESOLVEFUNC
 argument_list|(
 argument|EC_KEY_free
 argument_list|)
+endif|#
+directive|endif
+comment|// OPENSSL_NO_EC
 name|symbolsResolved
 operator|=
 literal|true
